--- a/The_Parking_garage_Kumar.ipynb
+++ b/The_Parking_garage_Kumar.ipynb
@@ -20,15 +20,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Database (MangoDB) class\n",
-    "class Mangodb:\n",
+    "# Database (MongoDB) class\n",
+    "class Mongodb:\n",
     "    \n",
     "    def __init__(self, db_name = 'SRH_Berlin_University', table_name = 'Parking_Data'):\n",
     "        self.db_name = db_name\n",
     "        self.table_name = table_name\n",
     "    \n",
-    "    # mangoDB database\n",
-    "    def data_upload_to_mangodb(self, record):\n",
+    "    # mongoDB database\n",
+    "    def data_upload_to_mongodb(self, record):\n",
     "        \n",
     "        try:          \n",
     "            from pymongo import MongoClient\n",
@@ -265,8 +265,8 @@
     "\n",
     "        bill['parking_duration_in_hr'] = bill['parking_duration'].seconds/3600\n",
     "        bill.pop('parking_duration')\n",
-    "        db = Mangodb() \n",
-    "        db.data_upload_to_mangodb(bill) \n",
+    "        db = Mongodb() \n",
+    "        db.data_upload_to_mongodb(bill) \n",
     "\n",
     "        \n",
     "def main():\n",
